-------------
Bug fixes:
 - Fixed problem where tool exit_test_logic was not geting validated 
   properly

Features
 - Added optional tool mem attribute, specifies amount of memory in
   gigabyes that will be requested by the generated batch job 
 - Add some #PBS directives to generated batch script for documentation
   and to facilitate running steps manually during testing/debugging
 - Add --keep-temp option to civet_run. If passed, the delete temp
   files job will not be submitted to clean up temporary pipeline files.

Version 1.4.0
-------------
Bug fixes
 - Fixed a problem in determining the version of civet components.
   Problem also fixed, separately, in similar cga code.

Features
 - Add "exit_if_exists" and "exit_test_logic" attributes to tools
 - Add "if_exists", "if_not_exists" attributes to commands
 - Only add python to the list of modules if it is required to run 
   the validate script, and the tool does not already specify a 
   python modulefile
 - Civet version now recorded in generated scripts


Version 1.3.1
-------------
Bug fixes
 - Create submitted_scripts directory with access only by the
   user running the pipeline (mode 600).

Features
 - Added a new bin subdirectory: bin/maintenance_programs.
 - Added a new program wall_time_ranges.py, which returns 
   - Requested
   - Max
   - Average
   - Min
   times for each cluster job in a pipeline.  A single parameter is
   a directory which is walked to find all the log directories contained
   therein.


Version 1.3.0
-------------
Bug fixes
 - Don't insert a space between an option's command_text and value if 
   command_text ends it either '=' or ':' when generating command line
 - Fix civet_status display of pipelines submitted with --no-submit

Features
 - Implemented "option override"
 - Implemented threads="True" tool options (value is taken from Tool's
   threads attribute)

Version 1.2.1
-------------
Bug fixes
 - Civet did not correctly detect command failures indicated by a non-