@@ -23,19 +23,22 @@ def main():
     parser = argparse.ArgumentParser()
     parser.add_argument('-q', '--queue', default=None, help="submission queue [default = TORQUE default]")
     parser.add_argument('-n', '--no-submit', dest='submit', action='store_false', help="Generate batch scripts but don't submit them")
-    parser.add_argument('-o', '--option-file', dest="option_file", default=None, help="option override file")
+    parser.add_argument('-o', '--option-file', dest='option_file', default=None, help="option override file")
     parser.add_argument('-t', '--keep-temp', dest='keep_temp', action='store_true', help="Don't delete temporary pipeline files")
-    parser.add_argument("pipeline", help="pipeline XML definition", nargs=1)
-    parser.add_argument("pipeline_args", help="pipeline arguments", nargs=argparse.REMAINDER)
+    parser.add_argument('--hold', dest='release_jobs', action='store_false', help="Jobs will be held after pipeline submission")
+    parser.add_argument('pipeline', help="pipeline XML definition", nargs=1)
+    parser.add_argument('pipeline_args', help="pipeline arguments", nargs=argparse.REMAINDER)
     parser.set_defaults(submit=True)
     parser.set_defaults(keep_temp=False)
+    parser.set_defaults(release_jobs=True)
     args = parser.parse_args()
     
 
     PL.parse_XML(args.pipeline[0], args.pipeline_args, skip_validation=True, 
                  queue=args.queue, submit_jobs=args.submit, 
                  search_path=os.environ.get('CIVET_PATH'), 
-                 user_override_file=args.option_file, keep_temp=args.keep_temp)
+                 user_override_file=args.option_file, keep_temp=args.keep_temp,
+                 release_jobs = args.release_jobs)
     PL.submit()
 
 if __name__ == "__main__":
